# minian

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis  .travis.yml  .travis.yml.tpl  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  VERSION  codecov.yml  conda-forge.yml  cross-registration.ipynb  demons.ipynb  environment.yml  pipeline.ipynb  pipeline_noted.ipynb  pyproject.toml  requirements.txt  setup.py
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  osx_64_.yaml  win_64_.yaml
.github/workflows/: pyformat.yml  pylint.yml  testandcov.yml
.scripts/: run_docker_build.sh  run_osx_build.sh
demo_movies/: sample1.mkv
docs/: Makefile  post_process.py  usermanual.rst
docs/ext/: normalize_html_id.py  toctree.py
docs/source/: conf.py  conf_autoapi.py  conf_base.py  contents.rst  cross-registration.rst  index.rst  minian.rst  minian.test.rst  modules.rst  pipeline_noted.rst  referenceguide.rst  userguide.rst  userguide_crossregistration.rst  userguide_pipeline.rst
examples/: batch_processing.ipynb  count_overlap.ipynb
minian/: .utilities.py.swp  README.md  __init__.py  analysis.py  caiman_patch.py  cnmf.py  cross_registration.py  initialization.py  install.py  mappings.py  miniscope.py  motion_correction.py  numericbtree.py  plot.py  preprocessing.py  utilities.py  visualization.py  visualization_ply.py
minian/test/: README.md  (+6 more)
recipe/: meta.yaml  post-link.bat
requirements/: requirements-base.txt  requirements-doc.txt
scripts/: convert_requirements.py
(+17051 files in other folders)
