[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.1"
tag_format = "v$version"
changelog_incremental = true
version_files = [
    "minian/__init__.py:__version__",
    "setup.py:version",
    "minian/install.py:VERSION"
]